# facz

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: file_manager.rs  main.rs
src/file_manager/: hash.rs
