[package]
name = "facz"
version = "0.1.1"
edition = "2021"
authors = ["Vadim Kerbs <opensource@kerbs.dev>"]
repository = "https://github.com/KerbsOpenSource/facz"
description = "File Auto Copy"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
sha2 = "0.10.8"
walkdir = "2.5.0"


[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units=1